tests/sessions/python/uncaught_unpicklable_exception.txtar
-- main.py main --
from autokitteh import activity
import openai
import httpx


@activity
def callstuff():
    resp = httpx.Response(425)
    resp.request = httpx.Request("GET", "https://example.com")

    # This exception can be pickled, but not unpickled.
    raise openai.RateLimitError("message", response=resp, body=None)


def main(_):
    callstuff()

-- error.txt --
error: RateLimitError()

openai.RateLimitError
